v3/cms/css/styles.css
/*
Concerto Platform - Online Adaptive Testing Platform
Copyright (C) 2011-2012, The Psychometrics Centre, Cambridge University

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; version 2
of the License, and not any of the later versions.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
*/

root { 
    display: block;
}

body{
    font-size: 10px;
    background: url(img/stripe.png) repeat;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.padding {
    padding:5px;
}

.horizontalPadding {
    padding-left:5px;
    padding-right:5px;
}

.margin{
    margin:5px;
}

.horizontalMargin {
    margin-left:5px;
    margin-right:5px;
}

.smallMargin{
    margin:2px;
}

.fullWidth{
    width:100%;
}

.fullHeight
{
    height:100%;
}

.hcenter{
    margin:auto;
}

.noWrap{
    white-space: nowrap;		
}

.noSpace
{
    margin:0px;
    padding:0px;
}

.notVisible {
    display:none;
}

.ui-autocomplete-loading { 
    background: white url('img/ajax-loader.gif') right center no-repeat; 
}

.ui-sortable-placeholder { border: 1px dotted black; visibility: visible !important; height: 50px !important; }
.ui-sortable-placeholder * { visibility: hidden; }

.thSortable{
    cursor: pointer;
}

.textareaCode {
}

.spanIcon{
    cursor:pointer;
}

.divSection{
}

.tableSectionHeader{
    height:35px;
}

.divSubsection {
}

ul {
    margin:0px;
}

.tooltipWindow{
    max-width: 300px;
}

.no-close .ui-dialog-titlebar-close {display: none }

.table {
    display:table;
    text-align: left;
}

.grid {
    min-width:800px;
}


.tdSectionColumnIcon{
    width:16px;
}
.tdSectionColumnCounter{
    width:25px;
    text-align: center;
    border: 1px solid black;
    border-radius: 50%;
    background-image: -webkit-gradient(linear, center top, center bottom, from(#fcfcfc), to(#bfbfbf), color-stop(3%, #f7f7f7), color-stop(12%, #f2f2f2), color-stop(90%, #d9d9d9));
    background-image: -webkit-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
    background-image: -moz-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
    background-image: -o-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
    background-image: -ms-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
    background-image: linear-gradient(to bottom, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
    -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
    -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;
    box-shadow: 0 1px 5px rgba(0,0,0,0.75), inset 0 1px 0 white;

}
.tdSectionColumnType{
    width:150px;
}
.tdSectionColumnAction{
}
.tdSectionColumnEnd{
    width:70px;
}
.sortableHandle{
    cursor: move;
}

.divSectionBracket{
    font-size: larger;
    font-weight: bold;
}
.divSectionContainer{
    margin-left: 25px;
}

